ヘッダ整理

--- a/www/circle/index.html
+++ b/www/circle/index.html
@@ -4,7 +4,7 @@
         <meta name="name" content="content"> 
         <meta http-equiv="Content-Style-Type" content="text/css"> 
         <meta http-equiv="Content-Script-Type" content="text/javascript"> 
-        <meta http-equiv="Last-Modified" content="2019-06-06 05:15:28 (Thursday) GMT"> 
+        <meta http-equiv="Last-Modified" content="2019-06-09 13:15:05 (Sunday) GMT"> 
         <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 "> 
         <meta name="description" content=""> 
         <title>
@@ -85,7 +85,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
             <div id="column"> 
                 <div id="column_left"> 
                     &nbsp;
-                    <!-- 原稿-->                                          
+                    <!-- 原稿-->                                                              
         <div id="con_wrapper"> 
             <h4 class="letter_title">30年度 『ひきこもり・なんでもの居場所』参加者募集</h4> 
             <p>ひきこもりがちな人や就職に自信が持てない人、うまく人間関係が持てない人など誰 でも安心して集える居場所が出来ました。 </p> 
@@ -138,26 +138,22 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                 <div id="column_right"> 
                     <!--サイドメニューここから-->                     
                     <br> 
-                    <div id="banner_zone"> 
-                        <div id="banner_hikikomori"> 
-                            <a href="./../kazokukai/index.html" target="_parent"> 
-                                <img src="../image/menu_1.PNG" alt="2019年家族の会"> 
-                            </a>                             
-                            <a href="./../honninkai/index.html" target="_parent"> 
-                                <img src="../image/menu_2.PNG" alt="2019年自立支援サークル"> 
-                            </a>                             
-                            <a href="./../chukansyurou/index.html" target="_parent"> 
-                                <img src="./../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等"> 
-                            </a>                             
-                            <a href="http://cscnara.blog.jp/" target="_top"> 
-                                <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"> 
-                            </a>                             
-                            <a href="http://workwaku.ksaka.net/" target="_top"> 
-                                <img src="./../image/menu_6.PNG" alt="わーく・ワク"> 
-                            </a>                             
-                            <a href="./../kazokukai/index.html" target="_parent"></a> 
-                        </div>                         
-                    </div>                     
+                    <a href="../kazokukai/index.html"> 
+                        <img src="../image/menu_1.PNG" alt="2019年家族の会" onmouseover="this.src='../image/menu_sita_1.PNG'" onmouseout="this.src='../image/menu_1.PNG'"> 
+                    </a>
+                    <a href="../honninkai/index.html"> 
+                        <img src="../image/menu_2.PNG" alt="2019年自立支援サークル" onmouseover="this.src='../image/menu_sita_2.PNG'" onmouseout="this.src='../image/menu_2.PNG'"> 
+                    </a>
+                    <a href="../chukansyurou/index.html"> 
+                        <img src="../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等" onmouseover="this.src='../image/menu_sita_3.PNG'" onmouseout="this.src='../image/menu_3.PNG'"> 
+                    </a>
+                    <a href="http://cscnara.blog.jp/"> 
+                        <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_5.PNG'" onmouseout="this.src='./../image/menu_5.PNG'"> 
+                    </a>
+                    <a href="http://workwaku.ksaka.net/"> 
+                        <img src="./../image/menu_6.PNG" alt="わーく・ワク" onmouseover="this.src='../image/menu_sita_6.PNG'" onmouseout="this.src='./../image/menu_6.PNG'"> 
+                    </a>
+                    <a href="../kazokukai/index.html" target="_parent"></a> 
                     <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p> 
                     <a href="./../chukansyurou/index.html">奈良県委託『若年就職困難者職場実習等ｻﾎﾟｰﾄ事業』<br> 
             15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br> 
@@ -170,9 +166,9 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                     <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a>
                     <br> 
                     パソコンのトラブル 相談はこちらへ 
-                    <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"> 
-                        <img src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"> 
-                    </a>                     
+                    <a href="http://otasuke6776.web.fc2.com/index.html"> 
+                        <img src="./../image/menu_7.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_7.PNG'" onmouseout="this.src='./../image/menu_7.PNG'"> 
+                    </a>
                 </div>                 
                 <!-- サイドメニューここまで -->                 
             </div>             
@@ -250,5 +246,5 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
             </div>             
         </div>         
         <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1"> 
-        <p style="text-align: center">2019-06-06 05:15:28 (Thursday)</p> 
+        <p style="text-align: center">2019-06-09 13:15:05 (Sunday)</p> 
     </body></html>
