--- a/www/link/index.html
+++ b/www/link/index.html
@@ -4,7 +4,7 @@
         <meta name="name" content="content"> 
         <meta http-equiv="Content-Style-Type" content="text/css"> 
         <meta http-equiv="Content-Script-Type" content="text/javascript"> 
-        <meta http-equiv="Last-Modified" content="2019-06-06 05:15:30 (Thursday) GMT"> 
+        <meta http-equiv="Last-Modified" content="2019-06-09 13:15:07 (Sunday) GMT"> 
         <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 "> 
         <meta name="description" content=""> 
         <title>
@@ -85,19 +85,17 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
             <div id="column"> 
                 <div id="column_left"> 
                     &nbsp;
-                    <!-- 原稿-->                                         
+                    <!-- 原稿-->                                                             
         <h4 class="letter_title">就職へ踏み出しにくい方へ</h4>
         <ul class="link">
             <li>
-                <a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">奈
-          良県青少年・生涯学習課</a>
+                <a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank">奈良県青少年・生涯学習課</a>
             </li>
             <li>
                 <a href="http://www.pref.nara.jp/1664.htm" target="_blank">奈良県雇用政策課</a>
             </li>
             <li>
-                <a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank">な
-          ら若者サポートステーション</a>
+                <a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank">なら若者サポートステーション</a>
             </li>
             <li>
                 <a href="http://www.neet-support.net/" target="_blank">ニートサポートネット</a>
@@ -106,16 +104,13 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
         <h4 class="letter_title">再就職先を見つけたい方へ</h4>
         <ul class="link">
             <li>
-                <a href="https://www.hellowork.go.jp/" target="_blank">ハローワーク</a>　・・・・
-                再就職のあっせんだけでなく、新卒者の就職もサポートしています
+                <a href="https://www.hellowork.go.jp/" target="_blank">ハローワーク</a>　・・・・再就職のあっせんだけでなく、新卒者の就職もサポートしています
             </li>
             <li>
-                <a href="http://www.jinzainews.co.jp" "="" target="_blank">人材ニュースナビ</a>　・・・
-                主に奈良県内の求職が集められています。新卒者向けの情報も
+                <a href="http://www.jinzainews.co.jp" target="_blank">人材ニュースナビ</a>　・・・主に奈良県内の求職が集められています。新卒者向けの情報も
             </li>
             <li>
-                <a href="http://re-katsu.jp/" target="_blank">re就活</a>　・・・20代・第二新卒向けの就
-                職・転職情報が載っています
+                <a href="http://re-katsu.jp/" target="_blank">re就活</a>　・・・20代・第二新卒向けの就職・転職情報が載っています
             </li>
             <li>
                 <a href="http://career.nikkei.co.jp/" target="_blank">日経キャリアネット</a>
@@ -133,8 +128,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
         <h4 class="letter_title">新卒者・学生の方へ</h4>
         <ul class="link">
             <li>
-                <a href="http://www.kansyuken.com/" target="_blank">関西学生就職指導研究所</a>　・・・
-                関西を中心とした新卒向けのサイト
+                <a href="http://www.kansyuken.com/" target="_blank">関西学生就職指導研究所</a>　・・・関西を中心とした新卒向けのサイト
             </li>
             <li>
                 <a href="http://www.gakujo.ne.jp/" target="_blank">学情ナビ</a>
@@ -146,22 +140,19 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
         <h4 class="letter_title">その他</h4>
         <ul class="link">
             <li>
-                <a href="http://www.jinzai-info.net/" target="_blank">リクルート人材サービスインフォ
-          メーションネット</a>　・・・採用担当者向け
+                <a href="http://www.jinzai-info.net/" target="_blank">リクルート人材サービスインフォメーションネット</a>　・・・採用担当者向け
             </li>
             <li>
                 <br>
             </li>
             <li>
-                <a href="http://bm.find-job.net/" target="_blank">Find Job!ビジネスマナーテスト</a>　・・・
-                就職活動についてのマナーがクイズ形式で学べます
+                <a href="http://bm.find-job.net/" target="_blank">Find Job!ビジネスマナーテスト</a>　・・・就職活動についてのマナーがクイズ形式で学べます
             </li>
             <li>
                 <a href="http://www.js88.com/" target="_blank">JS日本の学校</a>　・・・各種学校の情報
             </li>
             <li>
-                <a href="http://kokoro.mhlw.go.jp/" target="_blank">こころの耳</a>　・・・働く人のメ
-                ンタルヘルス・ポータルサイト
+                <a href="http://kokoro.mhlw.go.jp/" target="_blank">こころの耳</a>　・・・働く人のメンタルヘルス・ポータルサイト
             </li>
         </ul>
     
@@ -175,26 +166,22 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                 <div id="column_right"> 
                     <!--サイドメニューここから-->                     
                     <br> 
-                    <div id="banner_zone"> 
-                        <div id="banner_hikikomori"> 
-                            <a href="./../kazokukai/index.html" target="_parent"> 
-                                <img src="../image/menu_1.PNG" alt="2019年家族の会"> 
-                            </a>                             
-                            <a href="./../honninkai/index.html" target="_parent"> 
-                                <img src="../image/menu_2.PNG" alt="2019年自立支援サークル"> 
-                            </a>                             
-                            <a href="./../chukansyurou/index.html" target="_parent"> 
-                                <img src="./../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等"> 
-                            </a>                             
-                            <a href="http://cscnara.blog.jp/" target="_top"> 
-                                <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"> 
-                            </a>                             
-                            <a href="http://workwaku.ksaka.net/" target="_top"> 
-                                <img src="./../image/menu_6.PNG" alt="わーく・ワク"> 
-                            </a>                             
-                            <a href="./../kazokukai/index.html" target="_parent"></a> 
-                        </div>                         
-                    </div>                     
+                    <a href="../kazokukai/index.html"> 
+                        <img src="../image/menu_1.PNG" alt="2019年家族の会" onmouseover="this.src='../image/menu_sita_1.PNG'" onmouseout="this.src='../image/menu_1.PNG'"> 
+                    </a>
+                    <a href="../honninkai/index.html"> 
+                        <img src="../image/menu_2.PNG" alt="2019年自立支援サークル" onmouseover="this.src='../image/menu_sita_2.PNG'" onmouseout="this.src='../image/menu_2.PNG'"> 
+                    </a>
+                    <a href="../chukansyurou/index.html"> 
+                        <img src="../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等" onmouseover="this.src='../image/menu_sita_3.PNG'" onmouseout="this.src='../image/menu_3.PNG'"> 
+                    </a>
+                    <a href="http://cscnara.blog.jp/"> 
+                        <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_5.PNG'" onmouseout="this.src='./../image/menu_5.PNG'"> 
+                    </a>
+                    <a href="http://workwaku.ksaka.net/"> 
+                        <img src="./../image/menu_6.PNG" alt="わーく・ワク" onmouseover="this.src='../image/menu_sita_6.PNG'" onmouseout="this.src='./../image/menu_6.PNG'"> 
+                    </a>
+                    <a href="../kazokukai/index.html" target="_parent"></a> 
                     <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p> 
                     <a href="./../chukansyurou/index.html">奈良県委託『若年就職困難者職場実習等ｻﾎﾟｰﾄ事業』<br> 
             15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br> 
@@ -207,9 +194,9 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                     <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a>
                     <br> 
                     パソコンのトラブル 相談はこちらへ 
-                    <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"> 
-                        <img src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"> 
-                    </a>                     
+                    <a href="http://otasuke6776.web.fc2.com/index.html"> 
+                        <img src="./../image/menu_7.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_7.PNG'" onmouseout="this.src='./../image/menu_7.PNG'"> 
+                    </a>
                 </div>                 
                 <!-- サイドメニューここまで -->                 
             </div>             
@@ -287,5 +274,5 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
             </div>             
         </div>         
         <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1"> 
-        <p style="text-align: center">2019-06-06 05:15:30 (Thursday)</p> 
+        <p style="text-align: center">2019-06-09 13:15:07 (Sunday)</p> 
     </body></html>
