--- a/www/circle/index.html
+++ b/www/circle/index.html
@@ -4,11 +4,11 @@
         <meta name="name" content="content"> 
         <meta http-equiv="Content-Style-Type" content="text/css"> 
         <meta http-equiv="Content-Script-Type" content="text/javascript"> 
-        <meta http-equiv="Last-Modified" content="2019-06-09 17:52:45 (Sunday) GMT"> 
+        <meta http-equiv="Last-Modified" content="2019-06-10 11:11:51 (Monday) GMT"> 
         <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 "> 
         <meta name="description" content=""> 
         <title>
-            サークル
+            ﻿NPO法人キャリアサポートセンター奈良CSスクール サークル
 
         </title>         
         <link rel="stylesheet" type="text/css" href="./../image/reset-min.css"> 
@@ -278,5 +278,5 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                 <p><img src="../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60" width="256"> </p> 
             </div>             
         </div>         
-        <p style="text-align: center">2019-06-09 17:52:45 (Sunday)</p> 
+        <p style="text-align: center">2019-06-10 11:11:51 (Monday)</p> 
     </body></html>
