--- a/www/outline/index.html
+++ b/www/outline/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
-    <html><head> 
-        <meta charset="utf-8"> 
-        <meta name="name" content="content"> 
-        <meta http-equiv="Content-Style-Type" content="text/css"> 
-        <meta http-equiv="Content-Script-Type" content="text/javascript"> 
-        <meta http-equiv="Last-Modified" content="2019-06-10 11:11:52 (Monday) GMT"> 
-        <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 "> 
-        <meta name="description" content=""> 
-        <title>
-            ﻿NPO法人キャリアサポートセンター奈良CSスクール アウトライン
+    <html><head>
+<meta charset = "utf-8">
+<meta name="name" content="content">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta http-equiv="Last-Modified" content="2019-06-10 14:41:00 (Monday) GMT">
+<meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
+<meta name="description" content="">
 
-        </title>         
-        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css"> 
-        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css"> 
-        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
-        <link rel="shortcut icon" href="./../images/favicon.ico"> 
-        <script type="text/javascript" async="" src="./../images/ga.js"></script>
-        <script type="text/javascript">
+<title>﻿NPO法人キャリアサポートセンター奈良CSスクール アウトライン
+</title>
+<link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
+<link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
+<link href="./../image/common.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="./../images/favicon.ico">
+
+<!--- アクセス解析
+<script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
 
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-23234148-1']);
@@ -28,24 +28,31 @@ ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www')
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
 
-</script>         
-        <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+</script>
+おわり-->
+
+
+<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
+top: 18px !important;
+left: 50% !important;
+margin-left: -100px !important;
+width: 200px !important;
+border: 2px rgba(255,255,255,.38) solid !important;
+border-radius: 4px !important;
 }
 
 .en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}</style>         
-        <title>
-            NPO法人　キャリアサポートセンター奈良
-        </title>         
-    </head><body class="page"> 
+margin-left: 0px !important;
+}
+
+
+</style>
+
+
+<title>NPO法人　キャリアサポートセンター奈良</title>
+
+</head><body class="page"> 
         <div id="wrapper"> 
             <!-- ヘッダ部分 -->             
             <div id="header">
@@ -307,5 +314,5 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
                 <p><img src="../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60" width="256"> </p> 
             </div>             
         </div>         
-        <p style="text-align: center">2019-06-10 11:11:52 (Monday)</p> 
+        <p style="text-align: center">2019-06-10 14:41:00 (Monday)</p> 
     </body></html>
