--- a/contents/chukansyurou/article.html
+++ b/contents/chukansyurou/article.html
@@ -1,11 +1,35 @@
-<html> 
+
+
+<!doctype html>
+<html>
     <head> 
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
-    </head>     
-    <body>
-        <a href="../image/1_image.pdf">
-            <img src="./../image/1_imege.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族" style="width: 621px; height: 880px;">
-        </a>         
+            <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+            <link href="./../image/common.css" rel="stylesheet" type="text/css">
+        </head>
+        <body> 
+    <header> 
+ 
+    </header>
+    
+
+            <div id="column"> 
+                <div id="column_left"> 
+                    <!-- 原稿-->
+
+
+
+
+                    <a href="../image/1_image.pdf">
+                        <img src="./../image/1_imege.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族" style="width: 621px; height: 880px;">
+                    </a> 
+
+
+
+
+
+
+                    
+                    <!-- 原稿-->                     
+
     </body>     
 </html>
