--- a/contents/honninkai/article.html
+++ b/contents/honninkai/article.html
@@ -1,15 +1,20 @@
-<!--<img src="./../image/3_imege_2.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
--->
+<!doctype html> 
 <html> 
-    <head> 
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
+    <head>
+
     </head>     
     <body> 
-        <div class="imgcenter"> 
-            <a href="../image/3_image_2.pdf" target="_parent">
-                <img src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;"> 
-            </a>
-        </div>         
+        <header></header>         
+        <nav></nav>         
+        <article>
+
+                <div class="imgcenter"> 
+                        <a href="../image/3_image_2.pdf" target="_parent">
+                            <img src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;"> 
+                        </a>
+                    </div> 
+       </article>         
+        <aside></aside>         
+        <footer></footer>         
     </body>     
 </html>
