--- a/contents/sitemap/article.html
+++ b/contents/sitemap/article.html
@@ -1,48 +1,52 @@
-<!DOCTYPE html> 
+<!doctype html> 
 <html> 
-    <head> 
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
-        <title></title>         
+    <head>
+
     </head>     
     <body> 
-        <p> </p> 
-        <h4 class="letter_title">サイトマップ</h4> 
-        <ul class="sitemap_list" id="sitemap_left"> 
-            <li>
-                <a href="index.html" target="_self">トップページ</a>
-            </li>             
-            <li>
-                <a href="contact.html" target="_self">お問合せ</a>
-            </li>             
-            <li>
-                <a href="sitemap.html" target="_parent">サイトマップ</a>
-            </li>             
-            <li>
-                <a href="outline.html" target="_self">団体概要</a>
-            </li>             
-            <li>
-                <a href="admission.html" target="_self">ご支援・入会のご案内</a>
-            </li>             
-            <li>
-                <a href="link.html" target="_self">リンク集</a>
-            </li>             
-        </ul>         
-        <ul class="sitemap_list"> 
-            <li>
-                <a href="school.html" target="_self">職業訓練CSスクール</a>
-            </li>             
-            <li class="indent_2em">本部・橿原新ノ口校</li>             
-            <li class="">
-                <a href="pasokonn.html" target="_self">パソコンなら青年おたすけ隊</a>
-            </li>             
-            <li>
-                <a href="counseling.html" target="_self">相談・カウンセリング</a>
-            </li>             
-            <li>
-                <a href="circle.html" target="_self">ニート脱出サークル</a>
-            </li>             
-        </ul>         
-        <br> 
+        <header></header>         
+        <nav></nav>         
+        <article>
+                <h4 class="letter_title">サイトマップ</h4> 
+                <ul class="sitemap_list" id="sitemap_left"> 
+                    <li>
+                        <a href="index.html" target="_self">トップページ</a>
+                    </li>             
+                    <li>
+                        <a href="contact.html" target="_self">お問合せ</a>
+                    </li>             
+                    <li>
+                        <a href="sitemap.html" target="_parent">サイトマップ</a>
+                    </li>             
+                    <li>
+                        <a href="outline.html" target="_self">団体概要</a>
+                    </li>             
+                    <li>
+                        <a href="admission.html" target="_self">ご支援・入会のご案内</a>
+                    </li>             
+                    <li>
+                        <a href="link.html" target="_self">リンク集</a>
+                    </li>             
+                </ul>         
+                <ul class="sitemap_list"> 
+                    <li>
+                        <a href="school.html" target="_self">職業訓練CSスクール</a>
+                    </li>             
+                    <li class="indent_2em">本部・橿原新ノ口校</li>             
+                    <li class="">
+                        <a href="pasokonn.html" target="_self">パソコンなら青年おたすけ隊</a>
+                    </li>             
+                    <li>
+                        <a href="counseling.html" target="_self">相談・カウンセリング</a>
+                    </li>             
+                    <li>
+                        <a href="circle.html" target="_self">ニート脱出サークル</a>
+                    </li>             
+                </ul>         
+                <br> 
+
+       </article>         
+        <aside></aside>         
+        <footer></footer>         
     </body>     
 </html>
