動くようになった。

--- a/www/index.html
+++ b/www/index.html
@@ -6,19 +6,19 @@
 <meta name="name" content="content">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
-<meta http-equiv="Last-Modified" content="2019-06-12 00:30:46 (Wednesday) GMT">
+<meta http-equiv="Last-Modified" content="2019-06-12 00:54:00 (Wednesday) GMT">
 <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
 <meta name="description" content="">
 
 <title>﻿NPO法人キャリアサポートセンター奈良CSスクール サイトマップ
 </title>
-<link rel="stylesheet" type="text/css" href="./image/reset-min.css">
-<link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./image/mockup_mobile.css">
-<link href="./image/common.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="./images/favicon.ico">
+<link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
+<link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
+<link href="./../image/common.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="./../images/favicon.ico">
 
 <!--- アクセス解析
-<script type="text/javascript" async="" src="./images/ga.js"></script><script type="text/javascript">
+<script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
 
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-23234148-1']);
@@ -79,19 +79,19 @@ margin-left: 0px !important;
                 <br> 
                 <a href="../kazokukai/index.html"> 
                     <img src="../image/menu_1.PNG" alt="2019年家族の会" onmouseover="this.src='../image/menu_sita_1.PNG'" onmouseout="this.src='../image/menu_1.PNG'"> 
-                </a>                 
+                </a>         <br>        
                 <a href="../honninkai/index.html"> 
                     <img src="../image/menu_2.PNG" alt="2019年自立支援サークル" onmouseover="this.src='../image/menu_sita_2.PNG'" onmouseout="this.src='../image/menu_2.PNG'"> 
-                </a>                 
+                </a>          <br>       
                 <a href="../chukansyurou/index.html"> 
                     <img src="../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等" onmouseover="this.src='../image/menu_sita_3.PNG'" onmouseout="this.src='../image/menu_3.PNG'"> 
-                </a>                 
+                </a>            <br>      
                 <a href="http://cscnara.blog.jp/"> 
-                    <img src="./image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_5.PNG'" onmouseout="this.src='./image/menu_5.PNG'"> 
-                </a>                 
+                    <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_5.PNG'" onmouseout="this.src='./../image/menu_5.PNG'"> 
+                </a>             <br>     
                 <a href="http://workwaku.ksaka.net/"> 
-                    <img src="./image/menu_6.PNG" alt="わーく・ワク" onmouseover="this.src='../image/menu_sita_6.PNG'" onmouseout="this.src='./image/menu_6.PNG'"> 
-                </a>                 
+                    <img src="./../image/menu_6.PNG" alt="わーく・ワク" onmouseover="this.src='../image/menu_sita_6.PNG'" onmouseout="this.src='./../image/menu_6.PNG'"> 
+                </a>             <br>     
                 <a href="../kazokukai/index.html" target="_parent"></a> 
                 <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p> 
                 <div id="whatsnew"> 
@@ -113,7 +113,7 @@ margin-left: 0px !important;
                 </div>                 
                 <ul id="csschool"> 
                     <li id="title2"> 
-                        <img src="./image/side_title.jpg" alt="CSスクール" height="109" width="240"> 
+                        <img src="./../image/side_title.jpg" alt="CSスクール" height="109" width="240"> 
                     </li>                     
                     <li> 
                         <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a> 
@@ -123,7 +123,7 @@ margin-left: 0px !important;
                 <div id="side_computer"> 
                     <p>パソコンのトラブル<br> 相談はこちらへ </p> 
                 </div>                 
-                <img src="./image/menu_7.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_7.PNG'" onmouseout="this.src='./image/menu_7.PNG'"> 
+                <img src="./../image/menu_7.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_7.PNG'" onmouseout="this.src='./../image/menu_7.PNG'"> 
                 <a href="http://otasuke6776.web.fc2.com/index.html"> </a> 
             </div>             
             <!-- サイドメニューここまで -->             
@@ -167,7 +167,7 @@ margin-left: 0px !important;
                     <p><img src="../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60" width="256"> </p> 
                 </div>                 
             </div>             
-            <p style="text-align: center">2019-06-12 00:30:46 (Wednesday)</p> 
+            <p style="text-align: center">2019-06-12 00:54:00 (Wednesday)</p> 
         
         </footer>         
     </body>     
